# VoxTag

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: make_audio_samples.py
src/voxtag/: __init__.py  cli.py  core.py
tests/: test_voxtag.py
